added savedQuotes names can be edited at any time, also made the input changes input events

--- a/index.html
+++ b/index.html
@@ -5344,10 +5344,12 @@
             <button class="back-btn">
               <i class="fa-solid fa-arrow-left-long"></i>
             </button>
-            <small
-              class="tracking-widest font-semibold text-xl show-quote-heading text-center px-4"
-              >text from javascript inserted here</small
-            >
+            <input
+              type="text"
+              name="show-quote-heading"
+              id="show-quote-heading"
+              class="tracking-widest font-semibold text-lg show-quote-heading text-center px-4 bg-white dark:bg-black"
+            />
             <button class="close-modal">
               <i
                 class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
