--- a/index.html
+++ b/index.html
@@ -5162,6 +5162,7 @@
                 name="name"
                 id="name"
                 placeholder="Enter Name"
+                spellcheck="false"
                 class="outline-emerald-600 border-2 py-[.10rem] px-2 placeholder:tracking-wide text-black w-full name"
               />
             </div>
@@ -5344,12 +5345,14 @@
             <button class="back-btn">
               <i class="fa-solid fa-arrow-left-long"></i>
             </button>
-            <input
-              type="text"
+            <textarea
               name="show-quote-heading"
               id="show-quote-heading"
-              class="tracking-widest font-semibold text-lg show-quote-heading text-center px-4 bg-white dark:bg-black"
-            />
+              cols=""
+              rows="2"
+              spellcheck="false"
+              class="w-full mx-2 resize-none tracking-widest font-semibold text-lg text-center px-4 outline-emerald-700 dark:bg-black dark:outline-white xs:w-3/4 show-quote-heading"
+            ></textarea>
             <button class="close-modal">
               <i
                 class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
