made names bigger on show quote modal

--- a/index.html
+++ b/index.html
@@ -5351,7 +5351,7 @@
               cols=""
               rows="2"
               spellcheck="false"
-              class="w-full mx-2 resize-none tracking-widest font-semibold text-lg text-center px-4 outline-emerald-700 dark:bg-black dark:outline-white xs:w-3/4 show-quote-heading"
+              class="w-full mx-2 resize-none tracking-widest font-semibold text-lg text-center px-4 outline-emerald-700 dark:bg-black dark:outline-white xs:w-3/4 xs:text-xl sm:text-2xl show-quote-heading"
             ></textarea>
             <button class="close-modal">
               <i
