fixed show all cleans to be perfect height

--- a/index.html
+++ b/index.html
@@ -5571,7 +5571,7 @@
                 </button>
                 <!-- Show Cleans -->
                 <div
-                  class="w-full h-[230px] xss:h-[190px] xs:h-[178px] sm:h-[270px] lg:h-[220px] overflow-x-hidden overflow-y-hidden mx-auto hidden show-cleans slide-container relative"
+                  class="w-full h-[260px] xss:h-[190px] xs:h-[178px] sm:h-[270px] md:h-[188px] overflow-x-hidden overflow-y-hidden mx-auto hidden show-cleans slide-container relative"
                 >
                   <button
                     class="absolute top-1/2 right-0 text-xl hover:animate-bounce cursor-pointer z-10 next-btn"
