fixed sizing of back arrow and close icon button on view current quote modal

--- a/index.html
+++ b/index.html
@@ -5343,7 +5343,7 @@
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
             <button class="back-btn">
-              <i class="fa-solid fa-arrow-left-long"></i>
+              <i class="fa-solid fa-arrow-left-long text-3xl sm:text-4xl"></i>
             </button>
             <textarea
               name="show-quote-heading"
@@ -5355,7 +5355,7 @@
             ></textarea>
             <button class="close-modal">
               <i
-                class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
+                class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 sm:text-4xl close"
               ></i>
             </button>
           </div>
