made show current quote modal keep headings on small screen

--- a/index.html
+++ b/index.html
@@ -5364,9 +5364,7 @@
           <div class="quote-info sm:grid grid-cols-2 gap-6">
             <!-- First Item -->
             <article class="row-span-1 sm:border-4 border-white sm:p-4">
-              <h3 class="hidden text-center text-4xl font-bold p-1 sm:block">
-                Quote Info
-              </h3>
+              <h3 class="text-center text-4xl font-bold p-1">Quote Info</h3>
               <!-- Hours Changed -->
               <span
                 class="single-hours-changed block text-center text-xl"
@@ -5450,9 +5448,7 @@
             <form
               class="single-input-form row-span-2 sm:border-4 border-white sm:p-4"
             >
-              <h3
-                class="hidden text-center text-4xl font-bold p-1 bg-emerald-700 sm:block"
-              >
+              <h3 class="text-center text-4xl font-bold p-1 bg-emerald-700">
                 Client Info
               </h3>
               <!-- Email -->
@@ -5541,9 +5537,7 @@
             <!-- Status -->
             <!-- 3rd Item -->
             <article class="sm:-mt-25 sm:border-4 border-white sm:p-4">
-              <h3
-                class="hidden text-center text-2xl font-bold p-1 bg-emerald-700 sm:block"
-              >
+              <h3 class="text-center text-2xl font-bold p-1 bg-emerald-700">
                 Status & Other Quotes
               </h3>
               <h3 class="text-center font-semibold tracking-widest">Status</h3>
