--- a/index.html
+++ b/index.html
@@ -5334,10 +5334,10 @@
     <!-- End Of Saved Modal (Sidebar Icon Modal) -->
     <!-- Show Quote Modal (Show Current Quote) -->
     <div
-      class="modal-show bg-black bg-opacity-70 h-screen fixed top-0 left-0 w-full backdrop-blur-sm hidden items-center justify-center invisible"
+      class="modal-show bg-black bg-opacity-70 h-full fixed top-0 left-0 w-full backdrop-blur-sm hidden items-center justify-center invisible"
     >
       <div
-        class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[95vh] overflow-y-scroll fixed dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white sm:max-w-2xl md:max-w-5xl"
+        class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[95vh] overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white sm:max-w-2xl md:max-w-5xl"
       >
         <div class="p-2">
           <!-- Quote Heading -->
