--- a/index.html
+++ b/index.html
@@ -5293,7 +5293,7 @@
         <span class="bg-red-600 inline-block px-3 small-text"></span>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[80vh] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[80vw] max-w-sm max-h-[80vh] border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
         <div class="px-4 pt-2">
           <!-- Quote Heading -->
