--- a/index.html
+++ b/index.html
@@ -5337,7 +5337,7 @@
       class="modal-show bg-black bg-opacity-70 h-full fixed top-0 left-0 w-full backdrop-blur-sm hidden items-center justify-center invisible"
     >
       <div
-        class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[95vh] overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white sm:max-w-2xl md:max-w-5xl"
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none w-[80vw] max-w-sm max-h-[95vh] border-2 border-white overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white sm:max-w-2xl md:max-w-5xl"
       >
         <div class="p-2">
           <!-- Quote Heading -->
