changed color of display current quote name background

--- a/index.html
+++ b/index.html
@@ -5351,7 +5351,7 @@
               cols=""
               rows="2"
               spellcheck="false"
-              class="w-full mx-2 resize-none tracking-widest font-semibold text-lg text-center px-4 outline-emerald-700 dark:bg-black dark:outline-white xs:w-3/4 xs:text-xl max-w-md sm:text-2xl show-quote-heading"
+              class="w-full mx-2 resize-none tracking-widest font-semibold text-lg text-center px-4 bg-gray-300 outline-emerald-700 dark:bg-black dark:outline-white xs:w-3/4 xs:text-xl max-w-md sm:text-2xl show-quote-heading"
             ></textarea>
             <button class="close-modal">
               <i
@@ -5363,7 +5363,9 @@
           <!-- Quote Info -->
           <div class="quote-info sm:grid grid-cols-2 gap-6">
             <!-- First Item -->
-            <article class="row-span-1 sm:border-4 border-black sm:p-4 dark:border-white">
+            <article
+              class="row-span-1 sm:border-4 border-black sm:p-4 dark:border-white"
+            >
               <h3 class="text-center text-4xl font-bold p-1">Quote Info</h3>
               <!-- Hours Changed -->
               <span
