--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
   </head>
   <body class="bg-[#e9eef6] dark:bg-slate-700">
     <div class="container">
-      <h1
-        class="text-3xl max-w-sm mx-auto rounded-bl-2xl rounded-br-2xl shadow-xl bg-emerald-700 font-semibold text-center py-4 font-serif dark:text-white dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800"
+      <!-- Maid Quote Calculator Heading -->
+      <div
+        class="text-3xl max-w-sm mx-auto rounded-bl-2xl rounded-br-2xl shadow-xl bg-emerald-700 font-semibold text-center pb-4 pt-3 font-serif text-white border-2 border-t-0 border-white"
       >
-        Maid Quote Calculator
-      </h1>
+        <img
+          src="./img/sub-heading-logo-min.jpg"
+          class="w-[7rem] mx-auto"
+          alt="Maid Quote Calculator Sub Logo"
+        />
+        <h1 class="">Maid Quote Calculator</h1>
+      </div>
+      <!-- End Of Maid Quote Calculator Heading -->
       <div
         class="fixed top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all alert-save-form hidden opacity-0"
       >
