--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <!-- End Of Google Fonts -->
     <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- End Of Favicon -->
     <title>Maid Quote Calculator</title>
   </head>
   <body class="bg-[#e9eef6] dark:bg-slate-700">
     <div class="container">
       <!-- Maid Quote Calculator Heading -->
       <div
-        class="text-3xl max-w-sm mx-auto rounded-bl-2xl rounded-br-2xl shadow-xl bg-emerald-700 font-semibold text-center pb-4 pt-3 font-serif text-white border-2 border-t-0 border-white"
+        class="text-3xl max-w-sm mx-auto rounded-bl-2xl rounded-br-2xl shadow-xl bg-emerald-700 font-semibold text-center pb-4 pt-3 font-serif text-white dark:border-2 dark:border-t-0 dark:border-white"
       >
         <img
           src="./img/sub-heading-logo-min.jpg"
