fixed change hours to reset after another set of quotes are given, also moved functions around to always be declared before insilised

--- a/index.html
+++ b/index.html
@@ -6083,7 +6083,7 @@
           >
             <!-- Deep Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 deep-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 deep-article main-article"
             >
               <i
                 class="fa-solid fa-hand-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -6214,7 +6214,7 @@
 
             <!-- General Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 general-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 general-article main-article"
             >
               <i
                 class="fa-solid fa-spray-can-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -6317,7 +6317,7 @@
 
             <!-- Weekly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 weekly-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 weekly-article main-article"
             >
               <i
                 class="fa-solid fa-calendar-week p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -6422,7 +6422,7 @@
 
             <!-- Bi-Weekly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 bi-weekly-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 bi-weekly-article main-article"
             >
               <i
                 class="fa-solid fa-calendar-day p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -6527,7 +6527,7 @@
 
             <!-- Monthly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 monthly-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 monthly-article main-article"
             >
               <i
                 class="fa-solid fa-calendar-days p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
