made sidebar buttons clickable and when you hover on them, they change the icon look

--- a/index.html
+++ b/index.html
@@ -5908,30 +5908,30 @@
         <div class="flex flex-col space-y-4 group-hover:md:items-end">
           <!-- Settings Icon -->
           <div
-            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
+            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px] cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center md:hover:shadow-lg md:hover:border-emerald-700 settings-button settings"
           >
             <span
-              class="font-semibold hidden md:group-hover:inline-block tracking-widest"
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest settings-text"
               >Settings</span
             >
             <a href="#" title="Settings" class="ml-[.10rem]">
               <i
-                class="fa-solid fa-gear transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200 settings"
+                class="fa-solid fa-gear transition-all text-lg duration-200 settings-icon"
               ></i>
             </a>
           </div>
           <!-- End Of Settings Icon -->
           <!-- Save Icon -->
           <div
-            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
+            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px] cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center md:hover:shadow-lg md:hover:border-emerald-700 save-button save"
           >
             <span
-              class="font-semibold hidden md:group-hover:inline-block tracking-widest"
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest save-text"
               >Quotes</span
             >
             <a href="#" title="Saved Quotes" class="ml-[.17rem]">
               <i
-                class="fa-solid fa-floppy-disk transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200 save"
+                class="fa-solid fa-floppy-disk transition-all text-lg duration-200 save-icon"
               ></i>
             </a>
           </div>
