fixed settings modal to look good on mobile screens

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl w-[85vw] max-w-md max-h-full border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
+        class="bg-white p-3 shadow-lg rounded-xl w-[85vw] max-w-md max-h-full h-full xs:h-auto border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
       >
         <div class="px-4 pt-2">
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
