Fixed issue with display current quote modal not taking off flex class when clicking back

--- a/index.html
+++ b/index.html
@@ -5376,7 +5376,9 @@
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
             <button class="back-btn">
-              <i class="fa-solid fa-arrow-left-long text-3xl sm:text-4xl"></i>
+              <i
+                class="fa-solid fa-arrow-left-long text-3xl sm:text-4xl close"
+              ></i>
             </button>
             <textarea
               name="show-quote-heading"
