added in sort functionality

--- a/index.html
+++ b/index.html
@@ -5351,11 +5351,16 @@
                 </select>
               </div>
             </div>
-            <button class="close-modal">
-              <i
-                class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
-              ></i>
-            </button>
+            <div class="flex items-center gap-4">
+              <button class="sort-btn">
+                <i class="fa-solid fa-arrow-up-a-z fa-xl"></i>
+              </button>
+              <button class="close-modal">
+                <i
+                  class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
+                ></i>
+              </button>
+            </div>
           </div>
           <!-- End Of Quote Heading -->
           <!-- Quote Info -->
