added diffrent sort btn icons depending on what sorting is showing

--- a/index.html
+++ b/index.html
@@ -5353,7 +5353,12 @@
             </div>
             <div class="flex items-center gap-4">
               <button class="sort-btn">
-                <i class="fa-solid fa-arrow-up-a-z fa-xl"></i>
+                <span class="sorted-icon">
+                  <i class="fa-solid fa-arrow-down-a-z fa-xl"></i>
+                </span>
+                <span class="not-sorted-icon hidden">
+                  <i class="fa-solid fa-arrow-up-z-a fa-xl"></i>
+                </span>
               </button>
               <button class="close-modal">
                 <i
