added dates to show and be collected as data

--- a/index.html
+++ b/index.html
@@ -5411,6 +5411,8 @@
             <article
               class="row-span-1 sm:border-4 border-black sm:p-4 dark:border-white"
             >
+              <p class="quote-date text-center text-red-500"></p>
+
               <h3 class="text-center text-4xl font-bold p-1">Quote Info</h3>
               <!-- Hours Changed -->
               <span
