--- a/index.html
+++ b/index.html
@@ -5348,6 +5348,18 @@
                   <option value="gave quote">Gave Quote</option>
                   <option value="give callback">Give Callback</option>
                   <option value="booked job">Booked Job</option>
+                  <option value="today">Today</option>
+                  <option value="yesterday">Yesterday</option>
+                  <option value="last 2 days">Last 2 Days</option>
+                  <option value="last 3 days">Last 3 Days</option>
+                  <option value="last 4 days">Last 4 Days</option>
+                  <option value="last 5 days">Last 5 Days</option>
+                  <option value="over last week">Over Last Week</option>
+                  <option value="over last month">Over Last Month</option>
+                  <option value="over last 2 months">Over Last 2 Months</option>
+                  <option value="over last 3 months">Over Last 3 Months</option>
+                  <option value="over last 6 months">Over Last 6 Months</option>
+                  <option value="over last year">Over Last Year</option>
                 </select>
               </div>
             </div>
