--- a/index.html
+++ b/index.html
@@ -5332,35 +5332,70 @@
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
             <div>
-              <small class="tracking-widest font-semibold text-xl pb-2"
-                >Saved Quotes</small
+              <span class="tracking-widest font-semibold text-xl pb-2"
+                >Saved Quotes</span
               >
               <div class="flex flex-col text-center">
                 <label for="saved-quotes" class="tracking-wider text-md"
                   >Filter</label
                 >
-                <select
-                  name="saved-quotes"
-                  class="bg-emerald-600 text-white cursor-pointer border-2 px-1 tracking-wider select-colors"
-                  id="saved-quotes"
-                >
-                  <option value="all">All</option>
-                  <option value="gave quote">Gave Quote</option>
-                  <option value="give callback">Give Callback</option>
-                  <option value="booked job">Booked Job</option>
-                  <option value="today">Today</option>
-                  <option value="yesterday">Yesterday</option>
-                  <option value="last 2 days">Last 2 Days</option>
-                  <option value="last 3 days">Last 3 Days</option>
-                  <option value="last 4 days">Last 4 Days</option>
-                  <option value="last 5 days">Last 5 Days</option>
-                  <option value="over last week">Over Last Week</option>
-                  <option value="over last month">Over Last Month</option>
-                  <option value="over last 2 months">Over Last 2 Months</option>
-                  <option value="over last 3 months">Over Last 3 Months</option>
-                  <option value="over last 6 months">Over Last 6 Months</option>
-                  <option value="over last year">Over Last Year</option>
-                </select>
+                <div class="flex items-center gap-2">
+                  <select
+                    name="saved-quotes"
+                    class="bg-emerald-600 text-white cursor-pointer border-2 px-1 tracking-wider select-colors"
+                    id="saved-quotes"
+                  >
+                    <option value="all">All</option>
+                    <option value="gave quote">Gave Quote</option>
+                    <option value="give callback">Give Callback</option>
+                    <option value="booked job">Booked Job</option>
+                    <option value="today">Today</option>
+                    <option value="yesterday">Yesterday</option>
+                    <option value="last 2 days">Last 2 Days</option>
+                    <option value="last 3 days">Last 3 Days</option>
+                    <option value="last 4 days">Last 4 Days</option>
+                    <option value="last 5 days">Last 5 Days</option>
+                    <option value="over last week">Over Last Week</option>
+                    <option value="over last month">Over Last Month</option>
+                    <option value="over last 2 months">
+                      Over Last 2 Months
+                    </option>
+                    <option value="over last 3 months">
+                      Over Last 3 Months
+                    </option>
+                    <option value="over last 6 months">
+                      Over Last 6 Months
+                    </option>
+                    <option value="over last year">Over Last Year</option>
+                  </select>
+                  <div>
+                    <img
+                      src="img/calendar-emoji-min.png"
+                      class="h-7 w-7 hidden calender-icon"
+                      alt="Calender Icon"
+                    />
+                    <img
+                      src="img/contact-book.png"
+                      class="h-7 w-7 all-contacts-icon"
+                      alt="All Contacts Icon"
+                    />
+                    <img
+                      src="img/quotes.png"
+                      class="h-7 w-7 hidden gave-quote-icon"
+                      alt="Gave Quote Icon"
+                    />
+                    <img
+                      src="img/phone-call-red.png"
+                      class="h-7 w-7 hidden give-callback-icon"
+                      alt="Give Callback Icon"
+                    />
+                    <img
+                      src="img/manual-book.png"
+                      class="h-7 w-7 hidden booked-job-icon"
+                      alt="Booked Job Icon"
+                    />
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flex items-center gap-4">
