fixed issue with filterSelect icons not showing on mobile

--- a/index.html
+++ b/index.html
@@ -5339,7 +5339,7 @@
                 <label for="saved-quotes" class="tracking-wider text-md"
                   >Filter</label
                 >
-                <div class="flex items-center gap-2">
+                <div class="flex items-center flex-wrap gap-2">
                   <select
                     name="saved-quotes"
                     class="bg-emerald-600 text-white cursor-pointer border-2 px-1 tracking-wider select-colors"
@@ -5355,18 +5355,12 @@
                     <option value="last 3 days">Last 3 Days</option>
                     <option value="last 4 days">Last 4 Days</option>
                     <option value="last 5 days">Last 5 Days</option>
-                    <option value="over last week">Over Last Week</option>
-                    <option value="over last month">Over Last Month</option>
-                    <option value="over last 2 months">
-                      Over Last 2 Months
-                    </option>
-                    <option value="over last 3 months">
-                      Over Last 3 Months
-                    </option>
-                    <option value="over last 6 months">
-                      Over Last 6 Months
-                    </option>
-                    <option value="over last year">Over Last Year</option>
+                    <option value="last week">Last Week</option>
+                    <option value="last month">Last Month</option>
+                    <option value="last 2 months">Last 2 Months</option>
+                    <option value="last 3 months">Last 3 Months</option>
+                    <option value="last 6 months">Last 6 Months</option>
+                    <option value="last year">Last Year</option>
                   </select>
                   <div>
                     <img
