fixed filterSelect icons on mobile screens

--- a/index.html
+++ b/index.html
@@ -5328,7 +5328,7 @@
       <div
         class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[80vw] max-w-sm max-h-[80vh] border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
-        <div class="px-4 pt-2">
+        <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
             <div>
@@ -5392,7 +5392,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex items-center gap-4">
+            <div class="flex items-center gap-2 sm:gap-4">
               <button class="sort-btn">
                 <span class="sorted-icon">
                   <i class="fa-solid fa-arrow-down-a-z fa-xl"></i>
