made filterSelect icons fit better on mobile

--- a/index.html
+++ b/index.html
@@ -5326,7 +5326,7 @@
         <span class="bg-red-600 inline-block px-3 small-text"></span>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[80vw] max-w-sm max-h-[80vh] border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm max-h-[80vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
         <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
@@ -5339,7 +5339,7 @@
                 <label for="saved-quotes" class="tracking-wider text-md"
                   >Filter</label
                 >
-                <div class="flex items-center flex-wrap gap-2">
+                <div class="flex items-center flex-wrap gap-1 sm:gap-2">
                   <select
                     name="saved-quotes"
                     class="bg-emerald-600 text-white cursor-pointer border-2 px-1 tracking-wider select-colors"
@@ -5365,27 +5365,27 @@
                   <div>
                     <img
                       src="img/calendar-emoji-min.png"
-                      class="h-7 w-7 hidden calender-icon"
+                      class="h-6 w-6 hidden md:h-7 md:w-7 calender-icon"
                       alt="Calender Icon"
                     />
                     <img
                       src="img/contact-book.png"
-                      class="h-7 w-7 all-contacts-icon"
+                      class="h-6 w-6 md:h-7 md:w-7 all-contacts-icon"
                       alt="All Contacts Icon"
                     />
                     <img
                       src="img/quotes.png"
-                      class="h-7 w-7 hidden gave-quote-icon"
+                      class="h-6 w-6 hidden md:h-7 md:w-7 gave-quote-icon"
                       alt="Gave Quote Icon"
                     />
                     <img
                       src="img/phone-call-red.png"
-                      class="h-7 w-7 hidden give-callback-icon"
+                      class="h-6 w-6 hidden md:h-7 md:w-7 give-callback-icon"
                       alt="Give Callback Icon"
                     />
                     <img
                       src="img/manual-book.png"
-                      class="h-7 w-7 hidden booked-job-icon"
+                      class="h-6 w-6 hidden md:h-7 md:w-7 booked-job-icon"
                       alt="Booked Job Icon"
                     />
                   </div>
