took out some of the unnessary days filter

--- a/index.html
+++ b/index.html
@@ -5350,13 +5350,9 @@
                     <option value="give callback">Give Callback</option>
                     <option value="booked job">Booked Job</option>
                     <option value="today">Today</option>
-                    <option value="yesterday">Yesterday</option>
-                    <option value="last 2 days">Last 2 Days</option>
                     <option value="last 3 days">Last 3 Days</option>
-                    <option value="last 4 days">Last 4 Days</option>
-                    <option value="last 5 days">Last 5 Days</option>
-                    <option value="last week">Last Week</option>
-                    <option value="last month">Last Month</option>
+                    <option value="last 7 days">Last 7 Days</option>
+                    <option value="last 31 Days">Last 31 Days</option>
                     <option value="last 2 months">Last 2 Months</option>
                     <option value="last 3 months">Last 3 Months</option>
                     <option value="last 6 months">Last 6 Months</option>
