--- a/index.html
+++ b/index.html
@@ -5959,6 +5959,101 @@
       </div>
     </div>
     <!-- End Of Show Quote Modal -->
+    <!-- Analytics Modal -->
+    <div
+      class="modal-analytics bg-black bg-opacity-70 h-screen fixed top-0 left-0 w-full backdrop-blur-sm items-center justify-center invisible hidden"
+    >
+      <!-- //FIX ME// -->
+      <div
+        class="fixed top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all alert-saved-quotes hidden opacity-0"
+      >
+        <span
+          class="inline-flex items-center justify-center rounded-full bg-red-600"
+        >
+          <i class="fa-solid fa-circle-exclamation text-3xl"></i
+        ></span>
+        <p class="tracking-widest mt-1 saved-text">Quote Saved</p>
+        <span class="bg-red-600 inline-block px-3 small-text"></span>
+      </div>
+      <div
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm max-h-[80vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
+      >
+        <div class="px-2 sm:px-4 pt-2">
+          <!-- Analytics Heading -->
+          <div class="flex justify-between items-center border-b-2 mb-4 pb-4">
+            <h3 class="tracking-widest font-semibold text-xl font-serif">
+              Analytics Data
+            </h3>
+            <button class="close-modal">
+              <i
+                class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
+              ></i>
+            </button>
+          </div>
+          <!-- End Of Analytics Heading -->
+          <!-- Analytics Data  -->
+          <div>
+            <h3 class="tracking-widest font-semibold text-xl pb-2">
+              Status Data
+            </h3>
+            <!-- Total Quotes Given -->
+            <div class="flex items-center gap-2">
+              <h4>Total Quotes Given:</h4>
+              <span
+                class="total-quotes-given flex justify-center items-center font-bold bg-black text-white h-6 w-6 rounded-full shadow-lg"
+              ></span>
+            </div>
+            <!-- End Of Total Quotes Given -->
+            <!-- Legend -->
+            <div>
+              <h4 class="text-lg font-bold tracking-wide">Legend:</h4>
+              <!-- Gave Quote -->
+              <div class="flex items-center gap-2">
+                <span class="text-lg">Gave Quote</span>
+                <div
+                  class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-blue-500 rounded-full border-2 border-white gave-quote-circle"
+                ></div>
+              </div>
+              <!-- End Of Gave Quote -->
+              <!-- Give Callback -->
+              <div class="flex items-center gap-2">
+                <span class="text-lg">Give Callback</span>
+                <div
+                  class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-red-500 rounded-full border-2 border-white give-callback-circle"
+                ></div>
+              </div>
+              <!-- End Of Give Callback -->
+              <!-- Booked Job -->
+              <div class="flex items-center gap-2">
+                <span class="text-lg">Booked Job</span>
+                <div
+                  class="flex justify-center items-center w-5 h-5 text-xs text-white font-bold bg-emerald-500 rounded-full border-2 border-white booked-job-circle"
+                ></div>
+              </div>
+              <!-- End Of Booked Job -->
+            </div>
+            <!-- End Of Legend -->
+            <!-- Status Data Bar -->
+            <div
+              class="status-data my-4 flex rounded-full overflow-hidden shadow-lg dark:border-2 dark:border-white"
+            >
+              <div
+                class="flex justify-center items-center h-5 bg-blue-500 font-bold text-white gave-quote-data"
+              ></div>
+              <div
+                class="flex justify-center items-center h-5 w-1/3 bg-red-500 text-white font-bold give-callback-data"
+              ></div>
+              <div
+                class="flex justify-center items-center h-5 w-1/3 bg-emerald-500 text-white font-bold all-booked-jobs-data"
+              ></div>
+            </div>
+            <!-- End Of Status Data Bar -->
+          </div>
+          <!-- End Of Analytics Data  -->
+        </div>
+      </div>
+    </div>
+    <!-- Analytics Modal -->
     <!-- Sidebar -->
     <div
       class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:-translate-x-1 hover:rounded-tl-none hover:rounded-bl-none hover:bg-emerald-600 transition-all shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 md:-translate-x-24 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar"
@@ -6008,7 +6103,21 @@
             </a>
           </div>
           <!-- End Of Save Icon -->
-          <!-- End Of Settings Icon -->
+          <!-- Analytics Icon -->
+          <div
+            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px] cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center md:hover:shadow-lg md:hover:border-emerald-700 analytics-button analytics"
+          >
+            <span
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest analytics-text"
+              >Analytics</span
+            >
+            <a href="#" title="Analytics Data" class="ml-[.17rem]">
+              <i
+                class="fa-solid fa-chart-pie transition-all text-lg duration-200 analytics-icon"
+              ></i>
+            </a>
+          </div>
+          <!-- End Of Analytics Icon -->
           <!-- Deep Icon -->
           <!-- <div
             class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
