--- a/index.html
+++ b/index.html
@@ -5342,7 +5342,7 @@
                 <div class="flex items-center flex-wrap gap-1 sm:gap-2">
                   <select
                     name="saved-quotes"
-                    class="bg-emerald-600 text-white cursor-pointer border-2 px-1 tracking-wider select-colors"
+                    class="bg-green-700 text-white tracking-wider select-colors"
                     id="saved-quotes"
                   >
                     <option value="all">All</option>
@@ -5356,7 +5356,7 @@
                     <option value="last 2 months">Last 2 Months</option>
                     <option value="last 3 months">Last 3 Months</option>
                     <option value="last 6 months">Last 6 Months</option>
-                    <option value="last year">Last Year</option>
+                    <option value="over last year">Over Last Year</option>
                   </select>
                   <div>
                     <img
@@ -5992,6 +5992,23 @@
           </div>
           <!-- End Of Analytics Heading -->
           <!-- Analytics Data  -->
+          <!-- Analytics Filter -->
+          <select
+            name="analytics-filter"
+            id="analytics-filter"
+            class="bg-emerald-500 text-white"
+          >
+            <option value="all">All</option>
+            <option value="today">Today</option>
+            <option value="last 3 days">Last 3 Days</option>
+            <option value="last 7 days">Last 7 Days</option>
+            <option value="last 31 days">Last 31 Days</option>
+            <option value="last 2 months">Last 2 Months</option>
+            <option value="last 3 months">Last 3 Months</option>
+            <option value="last 6 months">Last 6 Months</option>
+            <option value="over last year">Over Last Year</option>
+          </select>
+          <!-- End Of Analytics Filter -->
           <div>
             <h3 class="tracking-widest font-semibold text-xl pb-2">
               Status Data
@@ -6034,17 +6051,15 @@
             </div>
             <!-- End Of Legend -->
             <!-- Status Data Bar -->
-            <div
-              class="status-data my-4 flex rounded-full overflow-hidden shadow-lg dark:border-2 dark:border-white"
-            >
+            <div class="status-data my-4 flex overflow-hidden shadow-lg">
               <div
-                class="flex justify-center items-center h-5 bg-blue-500 font-bold text-white gave-quote-data"
+                class="flex justify-center items-center h-5 bg-blue-500 font-bold text-white border-y-2 border-l-2 border-black dark:border-white gave-quote-data"
               ></div>
               <div
-                class="flex justify-center items-center h-5 w-1/3 bg-red-500 text-white font-bold give-callback-data"
+                class="flex justify-center items-center h-5 w-1/3 bg-red-500 text-white border-y-2 border-black dark:border-white font-bold give-callback-data"
               ></div>
               <div
-                class="flex justify-center items-center h-5 w-1/3 bg-emerald-500 text-white font-bold all-booked-jobs-data"
+                class="flex justify-center items-center h-5 w-1/3 bg-emerald-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold all-booked-jobs-data"
               ></div>
             </div>
             <!-- End Of Status Data Bar -->
