--- a/index.html
+++ b/index.html
@@ -6053,13 +6053,13 @@
             <!-- Status Data Bar -->
             <div class="status-data my-4 flex overflow-hidden shadow-lg">
               <div
-                class="flex justify-center items-center h-5 bg-blue-500 font-bold text-white border-y-2 border-l-2 border-black dark:border-white gave-quote-data"
+                class="flex justify-center items-center h-5 bg-blue-500 font-bold text-white border-y-2 border-l-2 border-black dark:border-white opacity-0 analytics-data gave-quote-data"
               ></div>
               <div
-                class="flex justify-center items-center h-5 w-1/3 bg-red-500 text-white border-y-2 border-black dark:border-white font-bold give-callback-data"
+                class="flex justify-center items-center h-5 bg-red-500 text-white border-y-2 border-black dark:border-white font-bold opacity-0 analytics-data give-callback-data"
               ></div>
               <div
-                class="flex justify-center items-center h-5 w-1/3 bg-emerald-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold all-booked-jobs-data"
+                class="flex justify-center items-center h-5 bg-emerald-500 text-white border-y-2 border-r-2 border-black dark:border-white font-bold opacity-0 analytics-data all-booked-jobs-data"
               ></div>
             </div>
             <!-- End Of Status Data Bar -->
