--- a/index.html
+++ b/index.html
@@ -5331,39 +5331,39 @@
         <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
-            <div>
-              <span class="tracking-widest font-semibold text-xl pb-2"
-                >Saved Quotes</span
-              >
-              <div class="flex flex-col text-center">
-                <label for="saved-quotes" class="tracking-wider text-md"
-                  >Filter</label
+            <h3 class="tracking-widest font-semibold text-xl font-serif">
+              Saved Quotes
+            </h3>
+            <div class="flex items-center gap-2 sm:gap-4">
+              <button class="sort-btn">
+                <span class="sorted-icon">
+                  <i class="fa-solid fa-arrow-down-a-z fa-xl"></i>
+                </span>
+                <span class="not-sorted-icon hidden">
+                  <i class="fa-solid fa-arrow-up-z-a fa-xl"></i>
+                </span>
+              </button>
+              <button class="close-modal">
+                <i
+                  class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
+                ></i>
+              </button>
+            </div>
+          </div>
+          <!-- End Of Quote Heading -->
+          <!-- Saved Quotes Body -->
+          <div class="border-b-2 mb-4 pb-4">
+            <div
+              class="flex justify-center xs:justify-between items-center flex-wrap gap-5 saved-quotes-filter-container"
+            >
+              <div class="flex flex-col">
+                <label
+                  for="saved-quotes"
+                  class="tracking-wider text-lg text-semi-bold text-center xs:text-left"
+                  >Filter Status</label
                 >
                 <div class="flex items-center flex-wrap gap-1 sm:gap-2">
-                  <select
-                    name="saved-quotes"
-                    class="bg-green-700 text-white tracking-wider select-colors"
-                    id="saved-quotes"
-                  >
-                    <option value="all">All</option>
-                    <option value="gave quote">Gave Quote</option>
-                    <option value="give callback">Give Callback</option>
-                    <option value="booked job">Booked Job</option>
-                    <option value="today">Today</option>
-                    <option value="last 3 days">Last 3 Days</option>
-                    <option value="last 7 days">Last 7 Days</option>
-                    <option value="last 31 Days">Last 31 Days</option>
-                    <option value="last 2 months">Last 2 Months</option>
-                    <option value="last 3 months">Last 3 Months</option>
-                    <option value="last 6 months">Last 6 Months</option>
-                    <option value="over last year">Over Last Year</option>
-                  </select>
                   <div>
-                    <img
-                      src="img/calendar-emoji-min.png"
-                      class="h-6 w-6 hidden md:h-7 md:w-7 calender-icon"
-                      alt="Calender Icon"
-                    />
                     <img
                       src="img/contact-book.png"
                       class="h-6 w-6 md:h-7 md:w-7 all-contacts-icon"
@@ -5385,26 +5385,53 @@
                       alt="Booked Job Icon"
                     />
                   </div>
+                  <select
+                    name="saved-quotes"
+                    class="bg-green-700 text-white tracking-wider select-colors"
+                    id="saved-quotes"
+                  >
+                    <option value="all">All</option>
+                    <option value="gave quote">Gave Quote</option>
+                    <option value="give callback">Give Callback</option>
+                    <option value="booked job">Booked Job</option>
+                  </select>
                 </div>
               </div>
-            </div>
-            <div class="flex items-center gap-2 sm:gap-4">
-              <button class="sort-btn">
-                <span class="sorted-icon">
-                  <i class="fa-solid fa-arrow-down-a-z fa-xl"></i>
-                </span>
-                <span class="not-sorted-icon hidden">
-                  <i class="fa-solid fa-arrow-up-z-a fa-xl"></i>
-                </span>
-              </button>
-              <button class="close-modal">
-                <i
-                  class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
-                ></i>
-              </button>
+              <div class="flex flex-col text-center">
+                <div class="flex items-center flex-wrap gap-1 sm:gap-2">
+                  <label
+                    for="filter-date"
+                    class="tracking-wider text-lg text-semi-bold"
+                    >Filter Dates</label
+                  >
+
+                  <div>
+                    <img
+                      src="img/calendar-emoji-min.png"
+                      class="h-6 w-6 -mt-2 md:h-7 md:w-7 calender-icon"
+                      alt="Calender Icon"
+                    />
+                  </div>
+                </div>
+                <select
+                  name="filter-date"
+                  id="filter-date"
+                  class="bg-green-700"
+                >
+                  <option value="all">All</option>
+                  <option value="today">Today</option>
+                  <option value="last 3 days">Last 3 Days</option>
+                  <option value="last 7 days">Last 7 Days</option>
+                  <option value="last 31 Days">Last 31 Days</option>
+                  <option value="last 2 months">Last 2 Months</option>
+                  <option value="last 3 months">Last 3 Months</option>
+                  <option value="last 6 months">Last 6 Months</option>
+                  <option value="over last year">Over Last Year</option>
+                </select>
+              </div>
             </div>
           </div>
-          <!-- End Of Quote Heading -->
+          <!-- End Of Saved Quotes Body -->
           <!-- Quote Info -->
           <div class="quote-names"></div>
           <!-- End Of Quote Info -->
