fixed filter dates on saved quotes modal color white and wider tracking

--- a/index.html
+++ b/index.html
@@ -5416,7 +5416,7 @@
                 <select
                   name="filter-date"
                   id="filter-date"
-                  class="bg-green-700"
+                  class="bg-green-700 text-white tracking-wider"
                 >
                   <option value="all">All</option>
                   <option value="today">Today</option>
