--- a/index.html
+++ b/index.html
@@ -5450,9 +5450,7 @@
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
             <button class="back-btn">
-              <i
-                class="fa-solid fa-arrow-left-long text-3xl sm:text-4xl close"
-              ></i>
+              <i class="fa-solid fa-arrow-left-long text-3xl sm:text-4xl"></i>
             </button>
             <textarea
               name="show-quote-heading"
