added search functionality to saved quotes

--- a/index.html
+++ b/index.html
@@ -5353,6 +5353,20 @@
           <!-- End Of Quote Heading -->
           <!-- Saved Quotes Body -->
           <div class="border-b-2 mb-4 pb-4">
+            <div class="text-center mb-4">
+              <label
+                for="search-by-name"
+                class="tracking-wider text-lg text-semi-bold text-center"
+                >Search By Name</label
+              >
+              <span><i class="fa-solid fa-magnifying-glass"></i></span>
+              <input
+                type="search"
+                name="search-by-name"
+                id="search-by-name"
+                class="border-2 border-black text-black"
+              />
+            </div>
             <div
               class="flex justify-center xs:justify-between items-center flex-wrap gap-5 saved-quotes-filter-container"
             >
